# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import requestsRouter from "./requests";
 import guestsRouter from "./guests";
 import adminRouter from "./admin";
 import userRouter from "./user";
+import feedbacksRouter from "./feedbacks";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(requestsRouter);
 router.use(guestsRouter);
 router.use(adminRouter);
 router.use(userRouter);
+router.use(feedbacksRouter);
 
 export default router;
