# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./requests";
 export * from "./guests";
 export * from "./admins";
 export * from "./users";
+export * from "./feedbacks";
